php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #45449 filesize() regression using ftp wrapper
Submitted: 2008-07-08 06:59 UTC Modified: 2008-07-11 18:28 UTC
From: crrodriguez at suse dot de Assigned:
Status: Closed Package: FTP related
PHP Version: 5.2.6 OS: linux
Private report: No CVE-ID: None
 [2008-07-08 06:59 UTC] crrodriguez at suse dot de
Description:
------------
Unfortunately, my bugfix for bug #43498 introduced a regression that can be seen using filesize() and the FTP wrapper

Reproduce code:
---------------
<?php
var_dump(filesize('ftp://ftp-1.gwdg.de/pub/locatedb'));
?>



Expected result:
----------------
int(143162194)

Actual result:
--------------
int(0)

I have fixed it, though, oops, sorry ;-)

there it goes:

http://stuff.cristianrodriguez.net/patches/filesize-regression.patch


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-07-11 18:28 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Thanks for the patch.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 26 18:00:02 2026 UTC